Feature/http tool loader append (#71)
* Add SecretResolver SPI with an environment-variable default resolver

* Thread a SecretResolver through the tool-provider factory context

* Realise HTTP_TOOL integrations via a ServiceLoader-discovered HttpToolProviderFactory

* Validate the HTTP_TOOL config array against a per-endpoint sub-schema

* Test HTTP_TOOL discovery end-to-end and the factory's parse, invoke, and secret resolution

* Move static imports after regular imports to match house style

* Apply the project formatter (120-col) to the touched bootstrap files

* Apply linter formatting to the core SPI and tools-http files

* Harden HttpToolProviderFactory context null-checks

* Undo defaultIfBlank change, as it calls System.getProperty for no reason